--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^6.35.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.56.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.0",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
