--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "mysql2": "^3.6.5",
     "path": "^0.12.7",
     "sequelize": "^6.35.2"
   },
